--- a/environment.yml
+++ b/environment.yml
@@ -7,3 +7,10 @@ dependencies:
   - conda-forge::graph-tool
   - pathlib
   - pip>=20.0.2
+  - pip:
+    - git+https://github.com/bbarad/Pyto.git
+    - git+https://github.com/GrotjahnLab/pycurv.git
+    - pymeshlab
+    - pyyaml
+    - click
+    - mrcfile
